--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.3.31",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@react-spring/parallax": "^9.7.4",
+    "@react-spring/web": "^9.7.4",
+    "@react-three/fiber": "^8.17.6",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon-cloud": "^4.1.4",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.26.1",
     "scroll-lock": "^2.1.5",
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.168.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
