--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/parallax": "^9.7.4",
     "@react-spring/web": "^9.7.4",
     "@react-three/fiber": "^8.17.6",
+    "@tabler/icons-react": "^3.14.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -22,6 +23,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icon-cloud": "^4.1.4",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.26.1",
